# ai-eval-engine

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
ai_eval_engine/: __init__.py  artifacts.py  cli.py  config.py  dashboard.py  domain_compliance_runbook.py  domain_context.py  eval_learnings.py  eval_script.py  evaluation.py  golden_set.py  llm.py  pipeline.py  runbook.py  sampling.py
configs/: financebench.yaml  scienceagentbench.yaml  support_agent_spec.yaml
data/: README.md
data/scienceagentbench/: NOTICE  tasks.csv
examples/: quickstart.py
examples/support_agent/: system_prompt.md  tools.md  user_stories.md
images/: figure1_pipeline.py
references/: .gitignore  SOURCES.md  references.bib
references/exemplar_scipy_paper/: myst.yml
results/: README.md  financebench_aggregate.json  financebench_nocontext_aggregate.json  make_ablation_figure.py
results/sab/: context.json  eval_report.json  eval_scienceagentbench-coding-agent.py  golden_set.json  index.html  predictions.json  runbook.json
results/sab_nocontext/: eval_report.json  golden_set.json  index.html  predictions.json  runbook.json
tests/: conftest.py  test_artifacts.py  test_cli.py  test_config.py  test_dashboard.py  test_domain_compliance_runbook.py  test_domain_context.py  test_eval_learnings.py  test_evaluation.py  test_golden_set.py  test_llm.py  test_pipeline.py  test_runbook.py  test_sampling.py
