[project]
name = "ai-eval-engine"
version = "0.1.0"
description = "Domain-aware evaluation framework for production AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shivika Bisen", email = "shivikakbisen@gmail.com" }]
keywords = [
    "llm",
    "evaluation",
    "ai-agents",
    "domain-aware",
    "golden-set",
    "llm-as-judge",
    "rag",
    "safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.92.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/sbisen/ai-eval-engine"
Repository = "https://github.com/sbisen/ai-eval-engine"
Issues = "https://github.com/sbisen/ai-eval-engine/issues"

[project.scripts]
ai-eval-engine = "ai_eval_engine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_eval_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before submodule imports; re-exports are intentional.
"ai_eval_engine/__init__.py" = ["E402", "F401"]
